@@ -103,12 +103,14 @@ subtest 'parallel insertion' => sub {
 
     my $mgr = new_ok('MongoManager');
 
-    ok( $mgr->_mongo_collection($coll_name)->insert_one( { job => '-1', 'when' => time } ),
+    ok(
+        $mgr->_mongo_collection($coll_name)->insert_one( { job => '-1', 'when' => time } ),
         "insert before cache clear" );
 
     ok( $mgr->_mongo_clear_caches, "caches cleared" );
 
-    ok( $mgr->_mongo_collection($coll_name)->insert_one( { job => '-1', 'when' => time } ),
+    ok(
+        $mgr->_mongo_collection($coll_name)->insert_one( { job => '-1', 'when' => time } ),
         "insert after cache clear, before fork" );
 
     my $num_forks = 3;
@@ -131,7 +133,7 @@ subtest 'parallel insertion' => sub {
     }
 
     is(
-        $mgr->_mongo_collection($coll_name)->count,
+        $mgr->_mongo_collection($coll_name)->count_documents( {} ),
         $num_forks + 2,
         "children created $num_forks objects"
     );
